--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-setuptools==75.1.0
-pandas
-numpy
-seaborn
+contourpy==1.3.0
+cycler==0.12.1
+fonttools==4.54.1
+kiwisolver==1.4.7
+matplotlib==3.9.2
+numpy==2.1.2
+packaging==24.1
+pandas==2.2.3
+pillow==10.4.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+pytest==8.3.3
+seaborn==0.13.2
 -e .
